--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -8,20 +8,16 @@ library(tidyverse)
 library(lubridate)
 library(sf)
 library(leaflet)
-library(sp)
 ```
 
 
 ## testing bikeshare data and general outline of sf map data
 
 ```{r}
-t <- read_csv("https://raw.githubusercontent.com/joshyam-k/scheduled-commit-action/master/data-raw/lime.csv")
+t <- read_csv("https://raw.githubusercontent.com/joshyam-k/schPull/master/data-folder/lime.csv")
 
 t <- t %>% 
   mutate(last_updated = with_tz(last_updated, "America/Los_Angeles"))
-
-st_write(map, "shiny_app/sf_boundary1.shp")
-
 
 map <- st_read("/Users/joshuayamamoto/Downloads/SF Shoreline and Islands/geo_export_f07717d3-0581-4d32-ae60-c9b2f961271a.shp")
 
@@ -29,6 +25,30 @@ map <- st_crop(map, xmin = -122.54, xmax = -122.35, ymin = 37.7, ymax = 37.83)
 
 
 ```
+
+Want to be able to look at varying levels of aggregation
+
+## San francisco districts
+
+```{r}
+districts <- st_read("shiny_app/sf_districts.shp")
+
+districts %>% 
+  ggplot() +
+  geom_sf()
+
+coords <- t %>% 
+  select(lon, lat, ) %>%
+  st_as_sf(coords = c(1,2))
+
+coords_new <- coords %>% st_set_crs(st_crs(districts))
+
+districts$n <- lengths(st_intersects(districts$geometry, coords_new))
+
+
+
+```
+
 
 ## San Francisco neighborhoods
 
@@ -56,9 +76,8 @@ neibs %>%
 using leaflet
 
 ```{r}
-
-
 pal <- colorNumeric(palette = "Oranges", domain = neibs$n)
+labl <- paste0(neibs$name, "<br>", "scooters: ", neibs$n)
 
 neibs %>% 
 leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
@@ -66,8 +85,8 @@ leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>%
                    options = providerTileOptions(opacity = 0.35)) %>%
   addProviderTiles(providers$Stamen.TonerLines,
                    options = providerTileOptions(opacity = 0.35)) %>% 
-  addProviderTiles(providers$Stamen.TonerLabels) %>% 
-  addPolygons(color = ~pal(n), fillOpacity = 0.9, popup = ~as.character(n)) %>% 
+  addPolygons(color = ~pal(n), fillOpacity = 1.0, popup = labl) %>% 
+  addPolylines(color = "black", weight = 1.5) %>% 
   addLegend("bottomright", pal = pal, 
             values = ~n, title = "Number of scooters",
             opacity = 1)
