--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -10,6 +10,103 @@ library(sf)
 library(leaflet)
 ```
 
+```{r}
+if (input$zoomslider == "Individual Points" & input$plotType == "yes") {
+      
+      leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
+        addProviderTiles(providers$MtbMap,
+                         options = providerTileOptions(opacity = 0.35)) %>%
+        addProviderTiles(providers$Stamen.TonerLines,
+                         options = providerTileOptions(opacity = 0.35)) %>% 
+        addProviderTiles(providers$Stamen.TonerLabels) %>% 
+        addCircleMarkers(lng = ~lon, lat = ~lat,
+                         data = leaf_reactive(), radius = 1,
+                         color = "#e87910", opacity = 0.3)
+      
+    } else if (input$zoomslider == "Individual Points" & input$plotType == "no") {
+      
+      leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
+        addProviderTiles(providers$MtbMap,
+                         options = providerTileOptions(opacity = 0.35)) %>%
+        addProviderTiles(providers$Stamen.TonerLines,
+                         options = providerTileOptions(opacity = 0.35)) %>% 
+        addProviderTiles(providers$Stamen.TonerLabels) %>% 
+        addCircleMarkers(lng = ~lon, lat = ~lat,
+                         data = leaf_reactive(), radius = 1,
+                         color = "#e87910", opacity = 0.3)
+      
+    } else if (input$zoomslider == "Neighborhoods" & input$plotType == "yes") {
+      
+      pal <- colorNumeric(palette = "Oranges", domain = leaf_reactive()$n)
+      labl <- paste0(leaf_reactive()$name, "<br>", "scooters: ", leaf_reactive()$n)
+      
+      leaf_reactive() %>% 
+        leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
+        addProviderTiles(providers$MtbMap,
+                         options = providerTileOptions(opacity = 0.35)) %>%
+        addProviderTiles(providers$Stamen.TonerLines,
+                         options = providerTileOptions(opacity = 0.35)) %>% 
+        addPolygons(color = ~pal(n), fillOpacity = 1.0, popup = labl) %>% 
+        addPolylines(color = "black", weight = 1.5) %>% 
+        addLegend("bottomright", pal = pal, 
+                  values = ~n, title = "Number of scooters",
+                  opacity = 1)
+    
+    } else if (input$zoomslider == "Neighborhoods" & input$plotType == "no") {
+      
+      pal <- colorNumeric(palette = "Oranges", domain = leaf_reactive()$n)
+      labl <- paste0(leaf_reactive()$name, "<br>", "scooters: ", leaf_reactive()$n)
+      
+      leaf_reactive() %>% 
+        leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
+        addProviderTiles(providers$MtbMap,
+                         options = providerTileOptions(opacity = 0.35)) %>%
+        addProviderTiles(providers$Stamen.TonerLines,
+                         options = providerTileOptions(opacity = 0.35)) %>% 
+        addPolygons(color = ~pal(n), fillOpacity = 1.0, popup = labl) %>% 
+        addPolylines(color = "black", weight = 1.5) %>% 
+        addLegend("bottomright", pal = pal, 
+                  values = ~n, title = "Number of scooters",
+                  opacity = 1)
+      
+    } else if (input$zoomslider == "Districts" & input$plotType == "yes") {
+      
+      pal <- colorNumeric(palette = "Oranges", domain = leaf_reactive()$n)
+      labl <- paste0("District ", leaf_reactive()$supervisor, "<br>", "scooters: ", leaf_reactive()$n)
+      
+      leaf_reactive() %>% 
+        leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
+        addProviderTiles(providers$MtbMap,
+                         options = providerTileOptions(opacity = 0.35)) %>%
+        addProviderTiles(providers$Stamen.TonerLines,
+                         options = providerTileOptions(opacity = 0.35)) %>% 
+        addPolygons(color = ~pal(n), fillOpacity = 1.0, popup = labl) %>% 
+        addPolylines(color = "black", weight = 1.5) %>% 
+        addLegend("bottomright", pal = pal, 
+                  values = ~n, title = "Number of scooters",
+                  opacity = 1)
+      
+    } else if (input$zoomslider == "Districts" & input$plotType == "no") {
+      
+      pal <- colorNumeric(palette = "Oranges", domain = leaf_reactive()$n)
+      labl <- paste0("District ", leaf_reactive()$supervisor, "<br>", "scooters: ", leaf_reactive()$n)
+      
+      leaf_reactive() %>% 
+        leaflet(options = leafletOptions(minZoom = 11, maxZoom = 14)) %>% 
+        addProviderTiles(providers$MtbMap,
+                         options = providerTileOptions(opacity = 0.35)) %>%
+        addProviderTiles(providers$Stamen.TonerLines,
+                         options = providerTileOptions(opacity = 0.35)) %>% 
+        addPolygons(color = ~pal(n), fillOpacity = 1.0, popup = labl) %>% 
+        addPolylines(color = "black", weight = 1.5) %>% 
+        addLegend("bottomright", pal = pal, 
+                  values = ~n, title = "Number of scooters",
+                  opacity = 1)
+      
+    }
+  })
+```
+
 
 ## testing bikeshare data and general outline of sf map data
 
