--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -12,7 +12,6 @@ library(leaflet)
 
 
 
-
 ## testing bikeshare data and general outline of sf map data
 
 ```{r}
@@ -240,4 +239,28 @@ week(max) <- week(max) - 2
 
 ```
 
+```{r}
+map %>% 
+      ggplot() +
+      geom_hex(data = t, aes(lon, lat), inherit.aes = F, bins = 18) +
+      geom_sf(fill = NA, color = "grey50") +
+      scale_fill_gradient(
+        low = "white",
+        high = "#60c957"
+      ) +
+      theme_void() +
+      theme(
+        plot.caption = element_text(family = "Roboto Mono", hjust = 1, size = 12 ),
+        legend.position = "left"
+      ) +
+      guides(fill = guide_colorbar(title.position = "left"))
+```
+
+
+```{r}
+map %>% 
+  ggplot() +
+  geom_hex(data = t, aes(lon, lat)) +
+  geom_sf()
+```
 
